@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.21 2005/11/08 20:30:58 reinoud Exp $
+$NetBSD: distinfo,v 1.22 2006/01/04 14:39:40 reinoud Exp $
 
-SHA1 (UDFclient.0.5.tgz) = 826d1556bf6fb238da0db8aaa6948e6326a81100
-RMD160 (UDFclient.0.5.tgz) = 16efef79c51de76b887e5cf76cfdd6942298bd37
-Size (UDFclient.0.5.tgz) = 225082 bytes
+SHA1 (UDFclient.0.5.1.tgz) = ef37e30c106a04f9fc4cc022fe377a25cddf2e1e
+RMD160 (UDFclient.0.5.1.tgz) = ef8570dc0974c1c9cf06c7c5bfcf59a7f518d91b
+Size (UDFclient.0.5.1.tgz) = 227322 bytes
