@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12351 2006/01/04 12:03:32 abs Exp $
+$NetBSD: CHANGES,v 1.12352 2006/01/04 14:39:40 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -94,3 +94,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated graphics/libgdiplus to 1.1.11 [recht 2006-01-04]
 	Updated textproc/py-elementtree to 1.2.6nb1 [wiz 2006-01-04]
 	Added databases/jdbc-postgresql81 version 404 [abs 2006-01-04]
+	Updated misc/udfclient to version 0.5.1 [reinoud 2006-01-04]
